--- a/HTML/templates/job-seeker-header.html
+++ b/HTML/templates/job-seeker-header.html
@@ -8,9 +8,13 @@
         <section class="job-seeker-find-jobs-button-section">
             <button class="job-seeker-find-jobs-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
 
-            <button class="mobile-btn" >☰</button>
-            <div class="mobile-btn-container-job-seeker">
-                <button class="job-seeker-find-jobs-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
+
+            <div class="mobile-btn-wrapper">
+                <button class="mobile-btn" >☰</button>
+
+                <div class="mobile-btn-container">
+                    <button class="mobile-button" onclick="redirectToFindJobsJobSeeker(event, this)">Find a job</button>
+                </div>
             </div>
         </section>
 
