--- a/HTML/views/sign-in-company.html
+++ b/HTML/views/sign-in-company.html
@@ -11,11 +11,12 @@
         <script src="/JS/viewComposition.js"></script>
         <script src="/JS/ValidationSigInCompany.js"></script>
 
-
         <link rel="stylesheet" href="/CSS/general-style.css">
         <link rel="stylesheet" href="/CSS/headers.css">
         <link rel="stylesheet" href="/CSS/sign-form-style.css">
         <link rel="stylesheet" href="/CSS/footer-style.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="wrapper">
