--- a/HTML/views/vacancy-post-company.html
+++ b/HTML/views/vacancy-post-company.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="/CSS/company-vacancy-post-style.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
 
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="wrapper">
