--- a/HTML/views/vacancy-view-company.html
+++ b/HTML/views/vacancy-view-company.html
@@ -9,13 +9,14 @@
     <script src="/JS/redirectFunctions.js"></script>
     <script src="/JS/auxiliaryFunctions.js"></script>
     <script src="/JS/viewComposition.js"></script>
-    <script src="/JS/ChangeButtonPlaceVacancyEdit.js"></script>
 
     <link rel="stylesheet" href="/CSS/general-style.css">
     <link rel="stylesheet" href="/CSS/headers.css">
     <link rel="stylesheet" href="/CSS/vacancy-toggle-nav-style.css">
     <link rel="stylesheet" href="/CSS/profiles-style.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="wrapper">
