--- a/CSS/footer-style.css
+++ b/CSS/footer-style.css
@@ -24,10 +24,8 @@ footer p {
 #footer-container {
     width: 20%;
     height: 80%;
-    padding-right: 10px;
-    padding-left: 30px;
     text-align: left;
-
+    padding-left: 30px;
 }
 
 #footer-container2 {
@@ -46,17 +44,15 @@ footer p {
         padding-bottom: 10px;
     }
     #footer-container {
-       width: 30%;
-       padding-right: 30px;
-       padding-left: 20px;
-
+        transform: scale(0.8);
+        width: 30%;
+        padding: 0;
     }
     #footer-container2 {
+        transform: scale(0.8);
         width: fit-content;
-        padding-right: 5px;
-        padding-left: 10px;
+        padding: 0;
     }
-
 }
 
 @media screen and (max-width: 1280px) {
@@ -68,15 +64,10 @@ footer p {
     }
     #footer-container {
         width: 30%;
-        padding-right: 30px;
-        padding-left: 30px;
-
     }
     #footer-container2 {
         width: fit-content;
         padding-right: 5px;
         padding-left: 10px;
     }
-
-
 }
