--- a/CSS/general-style.css
+++ b/CSS/general-style.css
@@ -12,7 +12,10 @@ body {
     color: #1a1a1a;
     border-bottom: 1px solid #aaabaf;
     padding: 5px;
-    margin-bottom: 10px;
+}
+
+.main-tittle h1 {
+    margin-left: 30px;
 }
 
 .back-button {
