--- a/CSS/main-page-style.css
+++ b/CSS/main-page-style.css
@@ -1,5 +1,5 @@
 .main-page-main {
-    min-height: 100%;
+    min-height: 80vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,8 +52,7 @@
 
 @media only screen and (max-width: 600px) {
     #container {max-width: fit-content}
-
+}
 @media only screen and (max-width: 1280px){
     #container {max-width: fit-content}
-}
 }
