--- a/HTML/templates/job-seeker-profile-view.html
+++ b/HTML/templates/job-seeker-profile-view.html
@@ -1,26 +1,5 @@
 <main>
-    <section class="dashboard-profile" >
-        <section class="user-dashboard" >
-
-            <section class="user-image-dashboard">
-                <label for="uploadImage">
-                    <img id="job-seeker-image" src="/images/asps.png" class="user-image" alt="user image">
-                </label>
-                <section class="image-controls">
-                    <h1 id="job-seeker-name">Lore ipsum</h1>
-                    <input type="file" id="uploadImage" accept="image/*" hidden>
-                </section>
-            </section>
-
-            <section >
-                <button class="SaveChanges"><b>Save changes</b></button>
-            </section>
-
-        </section>
-    </section>
-    <section id="tit<main>
-    <section class="dashboard-profile" >
-    <section class="user-dashboard" >
+    <section class="user-dashboard">
 
         <section class="user-image-dashboard">
             <label for="uploadImage">
@@ -31,42 +10,28 @@
                 <input type="file" id="uploadImage" accept="image/*" hidden>
             </section>
         </section>
-
-        <section >
-            <button class="SaveChanges"><b>Save changes</b></button>
-        </section>
-
-    </section>
-    </section>
-    <section id="titles">
-        <section id="about-me">
-            <h3 >About me</h3>
-        </section>
-        <section id="contact-information">
-            <h3>Contact  Information</h3>
-        </section>
     </section>
 
     <section id="space-user">
         <section class="space-write">
-            <textarea readonly class="text-user" id="job-seeker-description" ></textarea>
-            <h3 id="portfolio" >Portfolio</h3>
-            <textarea readonly class="portfolio-textarea" id="job-seeker-portfolio"  placeholder="Enter your portfolio link here" ></textarea>
+            <h3>About Me</h3>
+            <label for="job-seeker-description"></label><textarea class="text-user" id="job-seeker-description" placeholder="Enter your experience, your education, your courses"></textarea>
 
+            <h3 id="portfolio">Portfolio</h3>
+            <label for="job-seeker-portfolio"></label><textarea class="portfolio-textarea" id="job-seeker-portfolio" placeholder="Enter your portfolio link here"></textarea>
         </section>
 
-        <section id="space-write-email-phone-others">
-            <h4 class="margin-zero" >Email Address</h4>
-            <input readonly class="contact-method" type="text"  id="job-seeker-email" >
+        <aside id="contact-information">
+            <h3>Contact Information</h3>
+
+            <h4 class="margin-zero">Email Address</h4>
+            <label for="job-seeker-email"></label><input class="contact-method" type="text" id="job-seeker-email" placeholder="Enter your email address">
+
             <h4 class="margin-zero">Phone number</h4>
-            <input readonly class="contact-method" type="tel"  id="job-seeker-phone-number" >
-            <h4 class="margin-zero" >Other</h4>
-            <input readonly class="contact-method" type="text"  id="job-seeker-other-contact-method" >
-        </section>
+            <label for="job-seeker-phone-number"></label><input class="contact-method" type="tel" id="job-seeker-phone-number" placeholder="Enter your phone number">
 
+            <h4 class="margin-zero">Other</h4>
+            <label for="job-seeker-other-contact-method"></label><input class="contact-method" type="text" id="job-seeker-other-contact-method" placeholder="Enter any account">
+        </aside>
     </section>
-
-
-</main>
-
 </main>
