--- a/HTML/views/find-jobs-job-seeker.html
+++ b/HTML/views/find-jobs-job-seeker.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="/CSS/search-bar-style.css">
         <link rel="stylesheet" href="/CSS/job-seeker-list-style.css">
         <link rel="stylesheet" href="/CSS/footer-style.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="wrapper">
