--- a/HTML/views/index.html
+++ b/HTML/views/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="/CSS/headers.css">
         <link rel="stylesheet" href="/CSS/main-page-style.css">
         <link rel="stylesheet" href="/CSS/footer-style.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="wrapper">
