--- a/HTML/views/sign-up-company.html
+++ b/HTML/views/sign-up-company.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="/CSS/headers.css">
         <link rel="stylesheet" href="/CSS/sign-form-style.css">
         <link rel="stylesheet" href="/CSS/footer-style.css">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="wrapper">
