--- a/HTML/views/vacancy-applicants-list-company.html
+++ b/HTML/views/vacancy-applicants-list-company.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="/CSS/company-list-styles.css">
         <link rel="stylesheet" href="/CSS/footer-style.css">
 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="wrapper">
