--- a/HTML/views/vacancy-view-job-seeker.html
+++ b/HTML/views/vacancy-view-job-seeker.html
@@ -9,12 +9,13 @@
     <script src="/JS/redirectFunctions.js"></script>
     <script src="/JS/auxiliaryFunctions.js"></script>
     <script src="/JS/viewComposition.js"></script>
-    <script src="/JS/ChangeButtonPlaceVacancy.js" ></script>
 
     <link rel="stylesheet" href="/CSS/general-style.css">
     <link rel="stylesheet" href="/CSS/headers.css">
     <link rel="stylesheet" href="/CSS/profiles-style.css">
     <link rel="stylesheet" href="/CSS/footer-style.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="wrapper">
